"Refactored backend and frontend code: removed email verification form and mixin, updated user registration and login views, added account settings view, and modified templates and URLs."

--- a/backend_app/templates/login.html
+++ b/backend_app/templates/login.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form method="POST">
+        {% csrf_token %}
+        <label for="username">Username: </label>
+        <input type="text" name="username" placeholder="username">
+
+        <label for="password">Password:</label>
+        <input type="password" name="password" placeholder="password">
+
+        <button class="submit" type="submit">Login Account</button>
+    </form>
 </body>
 </html>
