--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -10,14 +10,14 @@
         <a href="">RESTAURANTS</a>
         {% if request.user.is_authenticated %}
             <a href="">CREATE</a>
-            <a href="">SETTINGS</a>
+            <a href={% url "settings" %}>SETTINGS</a>
         {% else %}
-            <a href="">REGISTER</a>
-            <a href="">LOGIN</a>
+            <a href={% url "register" %}>REGISTER</a>
+            <a href={% url "login" %}>LOGIN</a>
         {% endif %}
     </nav>
-
     <main>
+        
     </main>
 
     <footer></footer>
